--- a/Android Studio Project/EmergencyHelper/app/src/main/res/drawable/navigate_icon.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/drawable/navigate_icon.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="49.636dp"
-    android:height="49.636dp"
-    android:viewportWidth="49.636"
-    android:viewportHeight="49.636">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
 
     <path
+        android:pathData="M0 0h24v24H0z" />
+    <path
         android:fillColor="#D32F2F"
-        android:pathData="M 23.001 27.245 L 0 23.39 L 49.636 0.61 L 25.636 49.026 Z" />
+        android:pathData="M12 2L4.5 20.29l.71 .71 L12 18l6.79 3 .71-.71z" />
 </vector>
