--- a/Android Studio Project/EmergencyHelper/app/src/main/res/menu/menu_maps.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/menu/menu_maps.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/telefones"
+        android:orderInCategory="100"
+        android:title="@string/menu_telefones"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/hospitais"
+        android:orderInCategory="100"
+        android:title="@string/menu_hospitais"
+        app:showAsAction="never" />
     <item
         android:id="@+id/configuracoes"
         android:orderInCategory="100"
