--- a/Android Studio Project/EmergencyHelper/app/src/debug/res/values/google_maps_api.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/debug/res/values/google_maps_api.xml
@@ -16,7 +16,8 @@
     string in this file.
     -->
     <string name="google_maps_key_pedro" templateMergeStrategy="preserve" translatable="false">AIzaSyDpp-Wt45h44d7HbFirkKGpGl7XMVa5-gM</string>
-    <string name="google_maps_key_paulo" templateMergeStrategy="preserve" translatable="false">AIzaSyCQNcfaMTSfDpAVEJR8aqGU-B4Lk7qHFE0</string>
+    <string name="google_maps_key_paulo_notebook" templateMergeStrategy="preserve" translatable="false">AIzaSyCQNcfaMTSfDpAVEJR8aqGU-B4Lk7qHFE0</string>
+    <string name="google_maps_key_paulo_desktop" templateMergeStrategy="preserve" translatable="false">AIzaSyCQNcfaMTSfDpAVEJR8aqGU-B4Lk7qHFE0</string>
     <string name="google_maps_key_julianny" templateMergeStrategy="preserve" translatable="false">AIzaSyA5qVof3pUwp5b2Xe9nYjjvpzECDbDi41s</string>
 
 
