--- a/Android Studio Project/EmergencyHelper/app/src/main/res/layout/item_telefone.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/layout/item_telefone.xml
@@ -3,14 +3,15 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_weight="10"
-    android:layout_marginTop="16dp"
+    android:layout_marginTop="32dp"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp">
 
-    <Button
+    <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/call_icon"
+        android:background="#00ffffff"
         android:layout_weight="1"
         android:layout_marginRight="48dp"/>
     <TextView
@@ -18,6 +19,6 @@
         android:layout_height="wrap_content"
         android:textColor="@color/colorPrimary"
         android:text="testando"
-        android:layout_weight="9"/>
+        android:layout_weight="8"/>
 
 </LinearLayout>
