--- a/Android Studio Project/EmergencyHelper/app/src/main/res/layout/activity_telefones.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/layout/activity_telefones.xml
@@ -1,19 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="app.com.bugdroidbuilder.paulo.emergencyhelper.view.TelefonesActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".view.TelefonesUteisActivity">
 
-    <ListView
-        android:id="@+id/list_telefones"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/telefones_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="?attr/colorPrimary"
+        android:elevation="6dp"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ToolbarTheme"
+        app:popupTheme="@style/ToolbarTheme" />
 
-    </ListView>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_telefones"
+        android:layout_marginTop="?actionBarSize"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:scrollbars="vertical" >
 
-</LinearLayout>
+    </android.support.v7.widget.RecyclerView>
+
+</RelativeLayout>
