--- a/Android Studio Project/EmergencyHelper/app/src/main/res/layout/item_telefone.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/layout/item_telefone.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_weight="10"
     android:layout_marginTop="32dp"
     android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp">
+    android:layout_marginRight="16dp"
+    android:orientation="vertical">
 
     <ImageButton
+        android:id="@+id/call_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/call_icon"
         android:background="#00ffffff"
-        android:layout_weight="1"
-        android:layout_marginRight="48dp"/>
+        android:layout_alignParentLeft="true"/>
     <TextView
+        android:id="@+id/telefones_descricao"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/colorPrimary"
-        android:text="testando"
-        android:layout_weight="8"/>
+        android:layout_alignRight="@id/call_button" />
 
-</LinearLayout>
+</RelativeLayout>
