--- a/Android Studio Project/EmergencyHelper/app/src/main/res/layout/activity_maps.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/layout/activity_maps.xml
@@ -1,7 +1,9 @@
 <RelativeLayout android:layout_height="match_parent"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".view.MapsActivity">
     <android.support.v7.widget.Toolbar
         android:id="@+id/maps_toolbar"
         android:layout_width="match_parent"
@@ -36,6 +38,7 @@
             android:src="@drawable/call_icon"
             android:layout_alignParentRight="true"
             android:layout_marginBottom="16dp"
+            android:onClick="callHosp"
             />
 
         <android.support.design.widget.FloatingActionButton
