--- a/Android Studio Project/EmergencyHelper/app/src/main/res/layout/activity_telefones.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/layout/activity_telefones.xml
@@ -1,31 +1,25 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.TelefonesUteisActivity">
+    android:fitsSystemWindows="true"
+    tools:context="app.com.bugdroidbuilder.paulo.emergencyhelper.view.TelefonesUteisActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/telefones_toolbar"
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:background="?attr/colorPrimary"
-        android:elevation="6dp"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ToolbarTheme"
-        app:popupTheme="@style/ToolbarTheme" />
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/list_telefones"
-        android:layout_marginTop="?actionBarSize"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:scrollbars="vertical" >
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/telefones_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-    </android.support.v7.widget.RecyclerView>
+    </android.support.design.widget.AppBarLayout>
 
-</RelativeLayout>
+    <include layout="@layout/recycler_view_telefones" />
+
+</android.support.design.widget.CoordinatorLayout>
