--- a/Android Studio Project/EmergencyHelper/app/src/main/res/layout/item_telefone.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/layout/item_telefone.xml
@@ -6,12 +6,13 @@
     android:layout_marginTop="32dp"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
+    android:background="?android:attr/selectableItemBackground"
     android:orientation="vertical">
 
     <ImageButton
         android:id="@+id/call_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:src="@drawable/call_icon"
         android:background="#00ffffff"
         android:layout_alignParentLeft="true"/>
@@ -20,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/colorPrimary"
-        android:layout_alignRight="@id/call_button" />
+        android:layout_centerHorizontal="true"
+        android:textSize="24sp"/>
 
 </RelativeLayout>
