--- a/Android Studio Project/EmergencyHelper/app/src/main/res/layout/item_telefone.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/layout/item_telefone.xml
@@ -15,7 +15,9 @@
         android:background="#00ffffff"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="16dp"/>
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"/>
     <TextView
         android:id="@+id/telefones_descricao"
         android:layout_width="wrap_content"
@@ -24,15 +26,16 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="32dp"
         android:layout_toRightOf="@+id/call_button"
-        android:textSize="18sp"/>
+        android:textSize="18sp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"/>
     <LinearLayout
 
         android:layout_height="0.7dp"
         android:layout_width="match_parent"
         android:background="@color/colorPrimary"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="40dp">
+        >
     </LinearLayout>
 
 </RelativeLayout>
