Obs.: Google map API key não funcionou... 1 - Implementado integração assincrona para geração de marcadores no google map (á testar) 2 - MainActivity não é mais necessária.

--- a/Android Studio Project/EmergencyHelper/app/src/debug/res/values/google_maps_api.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/debug/res/values/google_maps_api.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="google_maps_key_pedro" templateMergeStrategy="preserve" translatable="false">
-    AIzaSyAwLMnyfLimdBcPHLCIv8xZ-fxkdbn_2_Y</string>
+    <string name="google_maps_key_pedro" templateMergeStrategy="preserve" translatable="false">AIzaSyAwLMnyfLimdBcPHLCIv8xZ-fxkdbn_2_Y</string>
 </resources>
