--- a/Android Studio Project/EmergencyHelper/app/src/main/res/layout/activity_hospital_description.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/layout/activity_hospital_description.xml
@@ -3,47 +3,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     tools:context="app.com.bugdroidbuilder.paulo.emergencyhelper.view.HospitalDescriptionActivity">
 
     <ImageView
+        android:id="@+id/hospitalImage"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3"
-        android:id="@+id/hospitalImage"/>
+        android:layout_weight="3" />
 
     <TextView
+        android:id="@+id/hospitalTitle"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:id="@+id/hospitalTitle"/>
+        android:layout_weight="1" />
 
     <TextView
+        android:id="@+id/hospitalEndereco"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:id="@+id/hospitalEndereco"/>
+        android:layout_weight="1" />
 
     <TextView
+        android:id="@+id/hospitalDescricao"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:id="@+id/hospitalDescricao"/>
+        android:layout_weight="1" />
 
     <TextView
+        android:id="@+id/hospitalTelefone"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:id="@+id/hospitalTelefone"/>
+        android:layout_weight="1" />
 
     <TextView
+        android:id="@+id/hospitalTipo"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:id="@+id/hospitalTipo"/>
+        android:layout_weight="1" />
 
 </LinearLayout>
