--- a/Android Studio Project/EmergencyHelper/app/src/main/res/layout/activity_maps.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/layout/activity_maps.xml
@@ -2,7 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:animateLayoutChanges="true">
+    android:animateLayoutChanges="true"
+    app:theme="@style/AppTheme">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/maps_toolbar"
@@ -40,8 +41,7 @@
             android:layout_alignParentRight="true"
             android:layout_marginBottom="16dp"
             android:onClick="emergencia"
-            android:src="@drawable/call_icon"
-            android:visibility="visible" />
+            android:src="@drawable/call_icon" />
 
 
         <android.support.design.widget.FloatingActionButton
