--- a/Android Studio Project/EmergencyHelper/app/src/main/res/values/styles.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/values/styles.xml
@@ -11,21 +11,22 @@
 
     </style>
 
-
-    <style name="TelefonesUteisTheme" parent="Theme.AppCompat.Light.NoActionBar">
-
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorPrimaryDark</item>
-
-    </style>
-
     <style name="ToolbarTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="android:popupMenuStyle">@color/colorTitleText</item>
         <item name="titleTextColor">@color/colorTitleText</item>
 
+    </style>
+
+
+    <style name="Titulo">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@android:color/black</item>
+    </style>
+    <style name="TextoComum">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@android:color/darker_gray</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
