--- a/Android Studio Project/EmergencyHelper/app/src/main/res/layout/activity_maps.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/layout/activity_maps.xml
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_marginBottom="16dp"
-            android:onClick="emergencia"
+            android:onClick="chamarAjuda"
             android:src="@drawable/call_icon" />
 
 
