--- a/Android Studio Project/EmergencyHelper/app/src/main/res/values/styles.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/values/styles.xml
@@ -22,7 +22,7 @@
 
     <style name="Titulo">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
     </style>
     <style name="TextoComum">
         <item name="android:textSize">14sp</item>
