--- a/Android Studio Project/EmergencyHelper/app/src/main/res/layout/activity_hospital_description.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/layout/activity_hospital_description.xml
@@ -33,12 +33,12 @@
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.7" />
+                app:layout_collapseParallaxMultiplier="0.8" />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="42dp"
+                android:layout_height="@dimen/toolbar_height_translucent"
                 android:paddingTop="@dimen/toolbar_padding_translucent"
                 app:layout_collapseMode="pin"
                 app:navigationIcon="@drawable/ic_arrow_back"
