--- a/Android Studio Project/EmergencyHelper/app/src/main/res/layout/conteudo.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/layout/conteudo.xml
@@ -23,7 +23,8 @@
                 android:layout_height="wrap_content" />
             <TextView
                 android:id="@+id/txt_telefone_hospital"
-                style="@style/TextoComum"
+                style="@style/Telefone"
+                android:onClick="ligarHospital"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <TextView
