Botão de navegar da tela principal agora exibe uma lista de hospitais

--- a/Android Studio Project/EmergencyHelper/app/src/main/res/layout/activity_navigate.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/layout/activity_navigate.xml
@@ -15,7 +15,22 @@
             android:layout_height="?attr/actionBarSize"
             app:navigationIcon="@drawable/ic_arrow_back"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:theme="@style/ToolbarTheme">
+
+
+                <!--<android.support.v7.widget.AppCompatSpinner-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginRight="46dp"-->
+                    <!--android:layout_marginEnd="46dp"-->
+                    <!--android:layout_centerVertical="true"-->
+                    <!--android:layout_alignParentRight="true"-->
+                    <!--android:layout_alignParentEnd="true">-->
+                <!--</android.support.v7.widget.AppCompatSpinner>-->
+
+
+        </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
