--- a/Android Studio Project/EmergencyHelper/app/src/main/res/layout/activity_maps.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/layout/activity_maps.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="?actionBarSize"
-        tools:context=".controller.MapsActivity" />
+        tools:context=".controller.activity.MapsActivity" />
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
