--- a/Android Studio Project/EmergencyHelper/app/src/main/res/menu/menu_maps.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/menu/menu_maps.xml
@@ -17,4 +17,9 @@
         android:orderInCategory="100"
         android:title="@string/menu_configuracoes"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/menu_sobre"
+        android:orderInCategory="100"
+        android:title="@string/menu_sobre"
+        app:showAsAction="never" />
 </menu>
