--- a/Android Studio Project/EmergencyHelper/app/src/main/res/menu/menu_maps.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/menu/menu_maps.xml
@@ -12,11 +12,11 @@
         android:orderInCategory="100"
         android:title="@string/menu_hospitais"
         app:showAsAction="never" />
-    <item
-        android:id="@+id/menu_configuracoes"
-        android:orderInCategory="100"
-        android:title="@string/menu_configuracoes"
-        app:showAsAction="never" />
+    <!--<item-->
+        <!--android:id="@+id/menu_configuracoes"-->
+        <!--android:orderInCategory="100"-->
+        <!--android:title="@string/menu_configuracoes"-->
+        <!--app:showAsAction="never" />-->
     <item
         android:id="@+id/menu_sobre"
         android:orderInCategory="100"
