- Card em branco removido

--- a/Android Studio Project/EmergencyHelper/app/src/main/res/values/colors.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#FFFFFF</color>
     <color name="colorTitleText">#FEFEFE</color>
     <color name="colorBackground">#EEEEEE</color>
+
+    <color name="colorPrimaryOffline">#1976d2</color>
+    <color name="colorPrimaryDarkOffline">#0d47a1</color>
 </resources>
