--- a/Android Studio Project/EmergencyHelper/app/src/main/res/values/styles.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/values/styles.xml
@@ -11,6 +11,13 @@
 
     </style>
 
+    <style name="AppThemeOffline" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimaryOffline</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDarkOffline</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
     <style name="ToolbarTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
