Otimizado a reação a mudanças na rede e gps no aplicativo

--- a/Android Studio Project/EmergencyHelper/app/src/main/res/layout/activity_configuracoes.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/layout/activity_configuracoes.xml
@@ -19,8 +19,7 @@
             android:background="?attr/colorPrimary"
             android:elevation="6dp"
             android:minHeight="?attr/actionBarSize"
-            android:theme="@style/ToolbarTheme"
-            app:popupTheme="@style/ToolbarTheme"/>
+            app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
     </android.support.design.widget.AppBarLayout>
 
