--- a/Android Studio Project/EmergencyHelper/app/src/main/res/layout/activity_navigate.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/layout/activity_navigate.xml
@@ -15,8 +15,7 @@
             android:layout_height="?attr/actionBarSize"
             app:navigationIcon="@drawable/ic_arrow_back"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:theme="@style/ToolbarTheme">
+            app:popupTheme="@style/AppTheme.PopupOverlay">
 
 
                 <!--<android.support.v7.widget.AppCompatSpinner-->
